# gitem

./: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  Onboarding.tsx  ReviewSession.tsx  Settings.tsx  Sidebar.tsx  main.tsx  store.ts  styles.css  themes.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  srs.rs  tree.rs
apps/desktop/src/editor/: Editor.tsx  Toolbar.tsx  auto-capitalize.ts  auto-replace.ts  cloze-decoration.ts  heading-fold.ts  hotkeys.ts  theme.ts  wysiwyg.ts
