[package]
name = "gitem"
version = "0.0.1"
edition = "2021"

[lib]
name = "gitem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gitem"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fsrs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
regex = "1"
walkdir = "2"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
